--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   <title></title>
 </head>
 <body>
-  <h1>Este es un index 2</h1>
+  <h1>Este es un index 2 de prueba</h1>
   <h2>Subtitlo</h2>
 </body>
 </html>
