nueva linea en development

--- a/index2.html
+++ b/index2.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Este es un index 2 de prueba</h1>
   <h2>Subtitlo</h2>
+  <h3>Esta es una nueva linea de prueba</h3>
 </body>
 </html>
