agregue nuevas carpetas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Hola mundo</h1>
-  <h2>Cambio en la carpeta prueba 2</h2>
+  <h2>Cambio en la carpeta prueba 2</h2> 
+  <button>Guardar</button>
 </body>
 </html>
